# truckgen-ai-backend

./: .env.example  .gitignore  README.md  config.py  pyproject.toml  start.py
app/: main.py
app/api/: security.py
app/api/v1/: __init__.py  auth.py  chat.py  ingest_json.py  user.py
app/conversation/: chatbot_prompts.py  contracts.py  dependencies.py  engine.py  prompts.py
app/conversation/handlers/: chat_action_handler.py
app/conversation/nlu/: turn_intent_interpreter.py
app/conversation/state/: session_store.py  spec_templates.py  states.py
app/conversation/validators/: field_constraint_validator.py  rag_validator.py
app/core/: database.py  llm.py  redis.py  session_manager.py  startup.py
app/db/models/: __init__.py  chat_bot.py  chat_message.py  chat_session.py  technical_doc.py  user.py  user_session.py
app/db/repositories/: chat_bot_repo.py  user_repo.py  (+4 more)
app/enums/: chat.py
app/handlers/: exception_handlers.py
app/image_engine/: image_provider.py  prompt_builder.py
app/middleware/: app_token.py
app/rag/: context_builder.py  embeddings.py  field_registry.py  ingest_pipeline.py  knowledge_loader.py  normalizer.py  range_resolver.py  retriever.py  vectorstore.py  vectorstore_client.py
app/schemas/: api_response.py  chat.py  chat_bot.py  chat_message.py  chat_session.py  image.py  technical_doc.py  user.py  user_session.py
app/services/: image_service.py  model_match_resolver.py
app/spec_provider/: json_provider.py
app/unused/: chat_llm.py  ingest_pipelines.py  llm_extractor.py  state_machine.py
app/utils/: response_builder.py
(+10 files in other folders)
